--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_awesome_calculator: ^1.0.0+1
   image_picker: ^1.1.1
+  firebase_core: ^2.31.0
+  cloud_firestore: ^4.17.3
+  firebase_auth: ^4.19.5
+  logger: ^2.3.0
+  path_provider: ^2.1.3
+  firebase_storage: ^11.7.5
 
 dev_dependencies:
   flutter_test:
