--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   logger: ^2.3.0
   path_provider: ^2.1.3
   firebase_storage: ^11.7.5
+  flutter_spinkit: ^5.2.1
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
