--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
-  flutter_awesome_calculator: ^1.0.0+1
   image_picker: ^1.1.1
   firebase_core: ^2.31.0
   cloud_firestore: ^4.17.3
   firebase_auth: ^4.19.5
   logger: ^2.3.0
   path_provider: ^2.1.3
-  firebase_storage: ^11.7.5
   flutter_spinkit: ^5.2.1
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
