--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
   badges: ^3.1.2
+  intl: ^0.19.0
+  syncfusion_flutter_datagrid: ^25.2.5
 
 dev_dependencies:
   flutter_test:
