--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   badges: ^3.1.2
   intl: ^0.19.0
   syncfusion_flutter_datagrid: ^25.2.5
+  syncfusion_flutter_core: ^25.2.5
+  syncfusion_flutter_datagrid_export: ^25.2.5
+  syncfusion_flutter_xlsio: ^25.2.5
+  open_file: ^3.3.2
+  syncfusion_flutter_pdf: ^25.2.5
 
 dev_dependencies:
   flutter_test:
