enhance the app for mobile set

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   syncfusion_flutter_xlsio: ^25.2.5
   open_file: ^3.3.2
   syncfusion_flutter_pdf: ^25.2.5
+  permission_handler: ^11.3.1
+  android_intent_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
